--- a/todo.txt
+++ b/todo.txt
@@ -6,7 +6,7 @@
  - DONE Players: edit name/team
  - DONE Kick players with no active connection
  - Make prettier (and fit nicely on all devices)
- - Host: view team allocations
+ - DONE Host: view team allocations
  ----------------
  - Host: kick players
  - Minify/concat JS
